<resources>
    <string name="app_name">Scouting 2019 Deep Space</string>
    <string name="sendData">Send Data</string>
    <string name="submitInitials">Submit</string>
    <string name="mainAuthor">Ken and Nate are the best! Revised 4/20/19</string>
    <string name="concatenateMatch">Concatenate Match</string>
    <string name="concatenatePit">Concatenate Pit</string>
    <string name="concatFolder">Enter concatenation folder name</string>
    <string name="concatFolderEditTextValue">Scouting</string>
    <string name="concatenateDataText">concatenateData</string>
    <string name="sendRobotPhotosText">Send Robot Photos</string>
    <string name="sendPitData">Send Pit Data</string>
    <string name="sendMatchData">Send Match Data</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="teamNumberHeading">Team Number</string>
    <string name="matchNumberHeading">Match Number</string>
    <string name="startingLocationHeading">Starting Location</string>
    <string name="movedOffHab">Moved off Hab?</string>
    <string name="movedOffHabNo">No</string>
    <string name="movedOffHabYes">Yes</string>
    <string name="playStyleHeading">How did the team play during SandStorm?</string>
    <string name="HintA">Cargo Ship: Hatch Panel</string>
    <string name="HintB">Cargo Ship: Cargo</string>
    <string name="HintC">Rocket: Lower Level Hatch Panel</string>
    <string name="HintD">Rocket: Lower Level Cargo</string>
    <string name="HintE">Rocket: Middle Level Hatch Panel</string>
    <string name="HintF">Rocket: Middle Level Cargo</string>
    <string name="HintG">Rocket: Upper Level Hatch Panel</string>
    <string name="HintH">Rocket: Upper Level Cargo</string>
    <string name="saveButton">Save</string>
    <string name="teamNumberError">Enter in team number</string>
    <string name="matchNumberError">Enter in match number</string>
    <string name="startingLocationError">Enter starting location</string>
    <string name="cargoShipTitle">Cargo Ship</string>
    <string name="rocketShipTitle">Rocket Ship</string>
    <string name="hatchPanelsOnCargoShip">Hatch Panels on Cargo Ship</string>
    <string name="cargoInCargoShip">Cargo in Cargo Ship</string>
    <string name="hatchPanelTop">Hatch Panel Top</string>
    <string name="hatchPanelMiddle">Hatch Panel Middle</string>
    <string name="hatchPanelBottom">Hatch Panel Bottom</string>
    <string name="cargoTop">Cargo Top</string>
    <string name="cargoMiddle">Cargo Middle</string>
    <string name="cargoBottom">Cargo Bottom</string>
    <string name="endgameHeading">Where was the robot at end game?</string>
    <string name="generalInfoHeading">General Info</string>
    <string name="cycle_time_heading">What was the robot\'s average cycle time?</string>
    <string name="over_all_Effectiveness_heading">Rate the overall effectiveness of the robot during the match.</string>
    <string name="trained_drive_team_heading">How trained did the drive team look?</string>
    <string name="over_all_placement">Rate the overall placement of cargo and hatch panels</string>
    <string name="observ_average_speed">Average Speed</string>
    <string name="observ_dropped_hatches">Dropped a lot of hatches</string>
    <string name="observ_dropped_cargo">Dropped a lot of cargo</string>
    <string name="observ_hard_time_hatches">Had a hard time placing hatches</string>
    <string name="observ_hard_time_cargo">Had a hard time placing cargo</string>
    <string name="hatch_pickup">How did the robot pick up hatch panels?</string>
    <string name="cargo_pickup">How did the robot pick up cargo?</string>
    <string name="hatch_panel_pickup_na">N/A</string>
    <string name="hatch_panel_pickup_port">At the port</string>
    <string name="hatch_panel_pickup_floor">Off the floor</string>
    <string name="cargo_pickup_na">N/A</string>
    <string name="cargo_pickup_port">At the port</string>
    <string name="cargo_pickup_floor">Off the floor</string>
    <string name="robotObservations">Robot Observations</string>
    <string name="summaryHeading">In summary what did the robot do well?</string>
    <string name="issuesHeading">List any issues the robot had.</string>
    <string name="issues">Enter Issues here</string>
    <string name="summary">Enter Summary Here</string>
    <string name="observ_fast">Fast</string>
    <string name="observ_slow">Slow</string>
    <string name="observ_jerky">Jerky</string>
    <string name="observ_smooth">Smooth</string>
    <string name="observ_fell_over">Fell Over</string>
    <string name="observ_died_mid">Died during match</string>
    <string name="observ_died_back">Died but came back</string>
    <string name="observ_penalties">Got lots of penalties</string>
    <string name="observ_fell_apart">Robot fell apart</string>
    <string name="observ_played_defense">Played defense most of the match</string>
    <string name="observ_not_much">Didn\'t do much</string>
    <string name="observ_hatch_pickup">Had hard time picking up hatch panels</string>
    <string name="observ_cargo_pickup">Had hard time picking up cargo</string>
    <string name="observ_slowed_by_robot">Had defense played against them</string>
    <string name="observ_dns">Didn\'t show up</string>
    <string name="defenseQuestion">How effective was the robot\'s defense?</string>
    <string name="counterDefenseQuestion">How effective was the robot\'s counter defense?</string>
    <string name="defendedQuestion">How effective was the robot while being defended?</string>
    <string name="defense_shut_down">Shut Down</string>
    <string name="defense_slow_down">Slowed Down</string>
    <string name="defense_not_effective">Not Effective</string>
    <string name="defense_not_effected">Not Effected</string>
    <string name="type_of_bot">Type of Bot</string>
    <string name="climbingHeading">Climb</string>
    <string name="successClimb">Success</string>
    <string name="failClimb">Fail</string>
    <string name="noClimb">N/A</string>
    <string name="climbTimeHeading">Climb Time</string>
    <string name="climb_fast">0 - 10 seconds</string>
    <string name="climb_medium">11 - 19 seconds</string>
    <string name="climb_slow">20 + seconds</string>
    <string name="climb_na">N/A</string>
    <string name="abilityToHelpClimbHeading">Can help others climb</string>
    <string name="ableToHelpClimb">Yes</string>
    <string name="unableToHelpClimb">No</string>
    <string name="onPlatformHeading">On platform</string>
    <string name="isOnPlatform">Success</string>
    <string name="isNotOnPlatform">Fail</string>
    <string name="notAttemptedPlatform">N/A</string>
    <string name="defenseHeading">Defense</string>
    <string name="effectiveDefense">Effective</string>
    <string name="ineffectiveDefense">Ineffective</string>
    <string name="receivedFoulsDefense">Fouled</string>
    <string name="noDefense">N/A</string>
    <string name="fouls">Fouls</string>
    <string name="nextButton">Move To Teleop</string>
    <string name="scouterInitials">Scouter Initials</string>
    <string name="rating_0">0</string>
    <string name="rating_1">1</string>
    <string name="rating_2">2</string>
    <string name="rating_3">3</string>
    <string name="rating_4">4</string>
    <string name="rating_5">5</string>
    <string name="rating_6">6</string>
    <string name="rating_7">7</string>
    <string name="rating_8">8</string>
    <string name="rating_9">9</string>
    <string name="rating_10">10</string>
    <string name="rating_na">N/A</string>
    <string name="matchScouting">Match</string>
    <string name="pitScouting">Pit</string>
    <string name="pitTeamNumberHeading">Team Number</string>
    <string name="pitRobotWeightHint">Robot Weight</string>
    <string name="pitDriveTrain">Drive Train</string>
    <string name="pitProgrammingLanguage">Programming Language</string>
    <string name="pitStartingHabPositionText">On what habitat platform do you prefer to start from?</string>
    <string name="pitPreLoadText">What game piece do you preload?</string>
    <string name="robotPreLoadText">What game piece was preloaded?</string>
    <string name="pitHatch">Hatch panel</string>
    <string name="pitCargo">Cargo</string>
    <string name="pitNothing">Nothing</string>
    <string name="pitfirst15">What does your robot do in the first 15 seconds?</string>
    <string name="pit15auton">Autonomous</string>
    <string name="pit15manual">Manual drive with camera</string>
    <string name="pit15nothing">Nothing</string>
    <string name="pitHatchPanels">Where does your robot place hatch panels?</string>
    <string name="pitCargoShip">Cargo Ship</string>
    <string name="pitRocketBottom">Rocket-Bottom</string>
    <string name="pitRocketMiddle">Rocket-middle</string>
    <string name="pitRocketTop">Rocket-top</string>
    <string name="pitNA">N/A</string>
    <string name="pitCargoPlacement">Where does your robot place cargo?</string>
    <string name="pitEndgame">What does your robot do at endgame?</string>
    <string name="pitCargoShipText">What do you place on the cargo ship before the match?</string>
    <string name="pitPreMatchCargo">Cargo</string>
    <string name="pitPreMatchHatch">Hatch Panel</string>
    <string name="pitPreMatchNothing">Nothing</string>
    <string name="pitOtherLabel">Other</string>
    <string name="defenseInPerimeter">Is your robot able to  retract all components within its perimeter in order to play defense?</string>
    <string name="defenseInPerimeterYes">Yes</string>
    <string name="defenseInPerimeterNo">No</string>
    <string name="cycleSuperFast">Under 5 seconds</string>
    <string name="cycleFast">5 to 10 Seconds</string>
    <string name="cycleMedium">10 to 15 Seconds</string>
    <string name="cycleSlow">20 + Seconds</string>
    <string name="cycleNa">N/A</string>
    <string name="pitJava">Java</string>
    <string name="pitCpp">C++</string>
    <string name="pitLabview">LabVIEW</string>
    <string name="pitOther">Other</string>
    <string name="pitRobotWeightTextView">How much does your robot weigh?</string>
    <string name="pitRobotArcadeGame">What old arcade game would your robot be in?</string>
    <string name="savePitButton">Save</string>
    <string name="takePhotoButton">Take Photo</string>
    <string name="pitTeamNumberError">Select a team number</string>
    <string name="pitProgrammingLanguageError">Enter Programming Language</string>
    <string name="robotNameError">Enter Robot Name</string>
    <string name="pitRobotWeightError">Enter Robot Weight</string>
    <string name="teleopCargoShipHatchPanelError">Enter Cargo Ship Hatch Panels</string>
    <string name="teleopCargoInCargoShipError">Enter Cargo Ship Cargo</string>
    <string name="hatchPanelTopError">Enter Top HatchPanels</string>
    <string name="hatchPanelMiddleError">Enter Middle Hatch Panels</string>
    <string name="hatchPanelBottomError">Enter Bottom Hatch Panels</string>
    <string name="cargoTopError">Enter Top Cargo</string>
    <string name="cargoMiddleError">Enter Middle Cargo</string>
    <string name="cargoBottomError">Enter Bottom Cargo</string>
    <string name="scouterInitialsError">Enter Scouter Initials</string>
    <string name="hatch_panel_pickup_both">Both</string>
    <string name="cargo_pickup_both">Both</string>
    <string name="editTeams">Import TEAMS</string>
    <string-array name="startingLocation">
        <item>Low Deck</item>
        <item>Middle Deck</item>

    </string-array>
    <string-array name="playStyle">
        <item> </item>
        <item>Autonomous</item>
        <item>Driver-Operated</item>
        <item>Didn\'t Move</item>

    </string-array>
</resources>