<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

            <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
                <TextView
                      android:id="@+id/pit_teamNumber_input_layout"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:ems="10"
                      android:textSize="10pt"
                      android:text="@string/pitTeamNumberHeading"/>
                <Spinner
                      android:id="@+id/pit_team_number_spinner"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                    android:layout_weight="1">
                </Spinner>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8pt"
                android:text="@string/pitRobotWeightTextView"/>

            <EditText
                android:id="@+id/robot_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pit_driveTrain_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textSize="10pt"
                    android:text="@string/pitDriveTrain"/>
                <Spinner
                    android:id="@+id/pit_drive_train_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pit_programmingLanguage_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textSize="10pt"
                    android:text="@string/pitProgrammingLanguage"/>
                <Spinner
                    android:id="@+id/pit_programming_language_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Spinner>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/pitOtherLabel"/>
            <EditText
                android:id="@+id/pit_other_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/take_photo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="takePhoto"
                android:text="@string/takePhotoButton" />

            <Button
                android:id="@+id/save_pit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="savePitData"
                android:text="@string/savePitButton" />






        </LinearLayout>
    </ScrollView>
</LinearLayout>