<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/sendMatchData"
        android:onClick="sendMatchData"
        android:textSize="12pt"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/sendPitData"
        android:onClick="sendPitData"
        android:textSize="12pt"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/sendRobotPhotosText"
        android:onClick="sendRobotPhotos"
        android:textSize="12pt"/>
<!--
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/concatenateDataText"
            android:onClick="concatenateData"/>

        <RadioGroup
            android:id="@+id/matchOrPit_RadiobtnGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/match_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concatenateMatch" />

            <RadioButton
                android:id="@+id/pit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concatenatePit" />

        </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/concatFolder_editText"
        android:text="@string/concatFolderEditTextValue"
        android:hint="@string/concatFolder" />
-->
</LinearLayout>