<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/match_button"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:onClick="showMatch"
                android:text="@string/matchScouting"
                android:textSize="12pt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/pit_button"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:onClick="showPit"
                android:textSize="12pt"
                android:text="@string/pitScouting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/match_button"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/send_data_button"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:onClick="sendData"
                android:textSize="12pt"
                android:text="@string/sendData"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pit_button"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/edit_teams_button"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:onClick="getTeams"
                android:text="@string/editTeams"
                android:textSize="12pt"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/send_data_button" />

            <TextView
                android:id="@+id/TeamsLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16pt"
                android:text="Loaded Teams"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/edit_teams_button"
                />

            <ScrollView
                android:id="@+id/TeamsScrollView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_constraintTop_toBottomOf="@id/TeamsLable"
                app:layout_constraintBottom_toTopOf="@id/textView"
                android:fillViewport="false"
                android:scrollbars="vertical">


                <TextView
                    android:id="@+id/TeamsList"
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text = "No teams loaded"
                    android:textColor = "@color/colorAccent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    />

            </ScrollView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainAuthor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="25dp" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>
